修复下载测试缓冲区错误；添加Docker支持

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <hr />
     <div id="main" style="margin: auto; width: 1200px;height:700px;"></div>
 
-    <script src="/echarts.min.js"></script>
-    <script src="/speedtest.js"></script>
+    <script src="echarts.min.js"></script>
+    <script src="speedtest.js"></script>
     <script>
 
         function copy(target, source) {
